--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <body id="page-top">
 
     <!-- Navigation -->
-    <nav id="mainNav" class="navbar fixed-top navbar-toggleable-md navbar-light">
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarExample" aria-controls="navbarExample" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -82,7 +82,7 @@
 
     <section class="bg-primary" id="about">
         <div class="container">
-            <div class="row">
+            <div class="row" id="strangeoffset">
                 <div class="col-lg-8 offset-lg-2 text-center">
                     <h2 class="section-heading text-white">About Me</h2>
                     <hr class="light">
@@ -175,7 +175,7 @@
 
     <section class="no-padding" id="portfolio">
         <div class="container-fluid">
-            <div class="row no-gutter popup-gallery">
+            <div class="row no-gutter">
                 <div class="col-lg-4 col-sm-6">
                     <a href="https://stylewrite.herokuapp.com" class="portfolio-box">
                         <img src="img/portfolio/thumbnails/1.jpg" class="img-fluid" alt="">
@@ -237,7 +237,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/5.jpg" class="portfolio-box">
+                    <a href="https://wtrsttn.herokuapp.com" class="portfolio-box">
                         <img src="img/portfolio/thumbnails/5.jpg" class="img-fluid" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
@@ -274,33 +274,18 @@
         <div class="container text-center">
             <div class="call-to-action">
                 <h2></h2>
-                <!--<a href="http://startbootstrap.com/template-overviews/creative/" class="btn btn-default btn-xl sr-button">Download Now!</a>-->
             </div>
         </div>
     </aside>
 
-    <!-- <section id="contact">
-        <div class="container">
-          <form id="contact" action="/portfolio" method="post">
-        <h3>Contact Me</h3>
-        <fieldset>
-          <input placeholder="Your Name" type="text" tabindex="1" name="name">
-        </fieldset>
-        <fieldset>
-          <input placeholder="Your Email" type="email" tabindex="2" name="email">
-        </fieldset>
-        <fieldset>
-          <textarea placeholder="Your Message" tabindex="5" name="message"></textarea>
-        </fieldset>
-        <fieldset>
-          <input class="btn btn-primary" type="submit" id="contact-submit">
-        </fieldset>
-      </form>
-        </div>
-    </section> -->
-
     <section id="contact">
       <div class="container">
+        <div class="row">
+            <div class="col-lg-12 text-center">
+                <h2 class="section-heading">Contact</h2>
+                <hr class="primary">
+            </div>
+        </div>
       <div class="row" id="contacticons">
         <div class="col-lg-3 col-md-6 text-center">
             <a href="https://www.linkedin.com/in/dandcastro"><i class="fa fa-4x text-primary sr-icons fa-linkedin-square" aria-hidden="true"></i></a>
