--- a/index.html
+++ b/index.html
@@ -25,18 +25,6 @@
     <link href="css/creative.min.css" rel="stylesheet">
     <link href="css/my.css" rel="stylesheet">
 
-    <!-- Temporary navbar container fix until Bootstrap 4 is patched -->
-    <style>
-    .navbar-toggler {
-        z-index: 1;
-    }
-
-    @media (max-width: 576px) {
-        nav > .container {
-            width: 100%;
-        }
-    }
-    </style>
 
 </head>
 
@@ -52,16 +40,16 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link page-scroll" href="#about">About</a>
+                        <a class="nav-link js-scroll-trigger" href="#about">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link page-scroll" href="#services">Skills</a>
+                        <a class="nav-link js-scroll-trigger" href="#services">Skills</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link page-scroll" href="#portfolio">Portfolio</a>
+                        <a class="nav-link js-scroll-trigger"href="#portfolio">Portfolio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link page-scroll" href="#contact">Contact</a>
+                        <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
                     </li>
                 </ul>
             </div>
