--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
           </div>
 
           <div class="col-lg-3 col-md-6 text-center">
-            <a href="https://twitter.com/dcstr0"><i class="fa fa-4x text-primary sr-iconsfa fa-twitter-square" aria-hidden="true"></i></a>
+            <a href="https://twitter.com/dadocastr"><i class="fa fa-4x text-primary sr-iconsfa fa-twitter-square" aria-hidden="true"></i></a>
           </div>
 
           <div class="col-lg-3 col-md-6 text-center">
